Afgerond _Fase 8 extra i18n updates

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -73,7 +73,7 @@
   "home.module.notes.title": "Schnelle Notizen",
   "home.module.notes.description": "Erfasse kurze Gedanken oder To-dos direkt von der Startseite.",
   "home.module.notes.cta": "Zu den Notizen",
-  "home.module.notes.count": "Aktive Notizen: {{count}}",
+  "home.module.notes.count": "Aktive Notizen: {count}",
   "desktopBlock.title": "Mobile App verfügbar",
   "desktopBlock.description": "Diese PWA ist primär für die Nutzung auf Smartphones konzipiert. Scanne den QR-Code, um sie auf deinem Gerät zu öffnen.",
   "desktopBlock.step1": "1. Öffne die Kamera-App auf deinem Smartphone.",
@@ -201,7 +201,7 @@
   "completion.brain.stat.time": "Zeit",
   "completion.brain.stat.unit": "Übung",
   "completion.brain.stat.result": "Ergebnis",
-  "completion.brain.result.foundWord": "Wort gefunden: {{word}}",
+  "completion.brain.result.foundWord": "Wort gefunden: {word}",
   "common.backToOverview": "Zurück zur Übersicht",
   "common.viewProgress": "Fortschritt ansehen",
   "training.intensity.light": "Leicht",
@@ -245,7 +245,7 @@
   "progress.kpi.totalMinutes": "Aktive Minuten",
   "progress.kpi.target": "Ziel: 300",
   "progress.brain.title": "Gehirntraining",
-  "progress.brain.weeklyCount": "Einheiten diese Woche: {{count}}",
+  "progress.brain.weeklyCount": "Einheiten diese Woche: {count}",
   "progress.highlight.title": "Starker Start!",
   "progress.highlight.body": "Du hast dein Ziel diese Woche erreicht. Weiter so.",
   "progress.section.recent": "Letzte Einheiten",
@@ -279,7 +279,7 @@
   "progress.history.detail.shareToast": "Bald verfügbar",
   "progress.history.detail.fields.durationActualShort": "Zeit",
   "progress.history.status.done": "Abgeschlossen",
-  "progress.history.subtitleCount": "Abgeschlossene Einheiten ({{count}})",
+  "progress.history.subtitleCount": "Abgeschlossene Einheiten ({count})",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Erfasse Träume und lasse sie per KI zusammenfassen.",
   "modules.dreamdropDemo.form.titleLabel": "Titel",
@@ -321,7 +321,7 @@
   "modules.riskRadarDemo.list.header.score": "Score",
   "modules.riskRadarDemo.list.header.volatility": "Volatilität",
   "modules.riskRadarDemo.list.aria": "Risikoergebnisse",
-  "modules.riskRadarDemo.list.scoreValue": "Score: {{value}}",
+  "modules.riskRadarDemo.list.scoreValue": "Score: {value}",
   "modules.riskRadarDemo.list.highRisk": "Hohes Risiko",
   "modules.riskRadarDemo.settings.title": "RiskRadar-Einstellungen",
   "modules.riskRadarDemo.settings.description": "Standard-Schwellenwerte für die Risiko-Demo festlegen.",
