--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -73,7 +73,7 @@
   "home.module.notes.title": "Quick Notes",
   "home.module.notes.description": "Capture short thoughts or to-dos directly from the home screen.",
   "home.module.notes.cta": "Go to notes",
-  "home.module.notes.count": "Active notes: {{count}}",
+  "home.module.notes.count": "Active notes: {count}",
   "desktopBlock.title": "Mobile app available",
   "desktopBlock.description": "This PWA is primarily designed for use on smartphones. Scan the QR code to open it on your device.",
   "desktopBlock.step1": "1. Open the camera app on your smartphone.",
@@ -205,7 +205,7 @@
   "completion.brain.stat.time": "Time",
   "completion.brain.stat.unit": "Exercise",
   "completion.brain.stat.result": "Result",
-  "completion.brain.result.foundWord": "Word found: {{word}}",
+  "completion.brain.result.foundWord": "Word found: {word}",
   "common.backToOverview": "Back to overview",
   "common.viewProgress": "View progress",
   "training.intensity.light": "Light",
@@ -246,7 +246,7 @@
   "progress.kpi.totalMinutes": "Active minutes",
   "progress.kpi.target": "Target: 300",
   "progress.brain.title": "Brain training",
-  "progress.brain.weeklyCount": "Sessions this week: {{count}}",
+  "progress.brain.weeklyCount": "Sessions this week: {count}",
   "progress.highlight.title": "Great start!",
   "progress.highlight.body": "You hit your goal this week. Keep the streak going.",
   "progress.section.recent": "Recent sessions",
@@ -280,7 +280,7 @@
   "progress.history.detail.shareToast": "Coming soon",
   "progress.history.detail.fields.durationActualShort": "Time",
   "progress.history.status.done": "Completed",
-  "progress.history.subtitleCount": "Completed sessions ({{count}})",
+  "progress.history.subtitleCount": "Completed sessions ({count})",
   "modules.dreamdropDemo.title": "Dreamdrop Demo",
   "modules.dreamdropDemo.description": "Capture dreams and let AI summarize them with mood context.",
   "modules.dreamdropDemo.form.titleLabel": "Title",
@@ -322,7 +322,7 @@
   "modules.riskRadarDemo.list.header.score": "Score",
   "modules.riskRadarDemo.list.header.volatility": "Volatility",
   "modules.riskRadarDemo.list.aria": "Risk results",
-  "modules.riskRadarDemo.list.scoreValue": "Score: {{value}}",
+  "modules.riskRadarDemo.list.scoreValue": "Score: {value}",
   "modules.riskRadarDemo.list.highRisk": "High risk",
   "modules.riskRadarDemo.settings.title": "RiskRadar settings",
   "modules.riskRadarDemo.settings.description": "Configure default thresholds for the risk demo.",
