Afgerond - Fase 9 Deel 1 Reminders & Notificaties

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -28,6 +28,53 @@
   "notifications.description": "Hier werden in die zukunft Benachrichtigungen und Meldungen angezeigt.",
   "notifications.notesSettingsSaved": "Einstellungen für Notizen wurden gespeichert.",
   "notifications.back": "Zurück",
+  "reminders.title": "Erinnerungen",
+  "reminders.intro": "Stelle Erinnerungen ein, damit deine Routine klappt. Feste Zeiten helfen, aktiv zu bleiben.",
+  "reminders.sections.time.title": "Zeitpunkte",
+  "reminders.sections.time.editLabel": "Uhrzeit für {{label}} bearbeiten",
+  "reminders.sections.days.title": "Tage",
+  "reminders.sections.days.subtitle": "Wähle, an welchen Tagen du Erinnerungen erhalten möchtest.",
+  "reminders.sections.days.silent": "Benachrichtigungen auch bei Stumm",
+  "reminders.actions.addTime": "Zeit hinzufügen",
+  "reminders.actions.save": "Einstellungen speichern",
+  "reminders.toast.settingsSaved": "Einstellungen gespeichert",
+  "reminders.toast.reminderDue": "Erinnerung für {{time}}",
+  "reminders.toast.permissionNeeded": "Aktiviere Benachrichtigungen, um auch System-Hinweise zu erhalten.",
+  "reminders.inbox.title": "Benachrichtigungen",
+  "reminders.inbox.clearAll": "Alles löschen",
+  "reminders.inbox.new": "Neu",
+  "reminders.inbox.empty": "Noch keine Benachrichtigungen.",
+  "reminders.inbox.close": "Schließen",
+  "reminders.inbox.unread": "{{count}} ungelesene Benachrichtigungen",
+  "reminders.inbox.reminderTitle": "Zeit für deine Routine",
+  "reminders.inbox.reminderBody": "Deine geplante Erinnerung ist da. Tippe zum Öffnen.",
+  "reminders.defaults.morning": "Morgenroutine",
+  "reminders.defaults.afternoon": "Nachmittagsrunde",
+  "reminders.defaults.additional": "Zusätzliche Erinnerung",
+  "reminders.days.mon": "Montag",
+  "reminders.days.tue": "Dienstag",
+  "reminders.days.wed": "Mittwoch",
+  "reminders.days.thu": "Donnerstag",
+  "reminders.days.fri": "Freitag",
+  "reminders.days.sat": "Samstag",
+  "reminders.days.sun": "Sonntag",
+  "reminders.days.monShort": "MO",
+  "reminders.days.tueShort": "DI",
+  "reminders.days.wedShort": "MI",
+  "reminders.days.thuShort": "DO",
+  "reminders.days.friShort": "FR",
+  "reminders.days.satShort": "SA",
+  "reminders.days.sunShort": "SO",
+  "reminders.days.monDate": "12",
+  "reminders.days.tueDate": "13",
+  "reminders.days.wedDate": "14",
+  "reminders.days.thuDate": "15",
+  "reminders.days.friDate": "16",
+  "reminders.days.satDate": "17",
+  "reminders.days.sunDate": "18",
+  "reminders.time.minutesAgo": "vor {{count}} Min.",
+  "reminders.time.hoursAgo": "vor {{count}} Std.",
+  "reminders.time.daysAgo": "vor {{count}} Tag(en)",
   "settings.title": "Einstellungen",
   "settings.description": "Hier können Grundeinstellungen der App verwaltet werden.",
   "settings.global.description": "Hier können Grundeinstellungen der App verwaltet werden.",
