--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,6 +28,53 @@
   "notifications.description": "Here notifications and alerts will be shown in the future.",
   "notifications.notesSettingsSaved": "Note settings have been saved.",
   "notifications.back": "Back",
+  "reminders.title": "Reminders",
+  "reminders.intro": "Set reminders to keep your routine on track. A fixed moment makes it easier to stay active.",
+  "reminders.sections.time.title": "Times",
+  "reminders.sections.time.editLabel": "Edit time for {{label}}",
+  "reminders.sections.days.title": "Days",
+  "reminders.sections.days.subtitle": "Select on which days you want to receive reminders.",
+  "reminders.sections.days.silent": "Notifications even when silent",
+  "reminders.actions.addTime": "Add time",
+  "reminders.actions.save": "Save settings",
+  "reminders.toast.settingsSaved": "Settings saved",
+  "reminders.toast.reminderDue": "Reminder for {{time}}",
+  "reminders.toast.permissionNeeded": "Enable notifications to also receive system alerts.",
+  "reminders.inbox.title": "Notifications",
+  "reminders.inbox.clearAll": "Clear all",
+  "reminders.inbox.new": "New",
+  "reminders.inbox.empty": "No notifications yet.",
+  "reminders.inbox.close": "Close",
+  "reminders.inbox.unread": "{{count}} unread notifications",
+  "reminders.inbox.reminderTitle": "Time for your routine",
+  "reminders.inbox.reminderBody": "Your planned reminder is ready. Open to view.",
+  "reminders.defaults.morning": "Morning routine",
+  "reminders.defaults.afternoon": "Afternoon walk",
+  "reminders.defaults.additional": "Extra reminder",
+  "reminders.days.mon": "Monday",
+  "reminders.days.tue": "Tuesday",
+  "reminders.days.wed": "Wednesday",
+  "reminders.days.thu": "Thursday",
+  "reminders.days.fri": "Friday",
+  "reminders.days.sat": "Saturday",
+  "reminders.days.sun": "Sunday",
+  "reminders.days.monShort": "MON",
+  "reminders.days.tueShort": "TUE",
+  "reminders.days.wedShort": "WED",
+  "reminders.days.thuShort": "THU",
+  "reminders.days.friShort": "FRI",
+  "reminders.days.satShort": "SAT",
+  "reminders.days.sunShort": "SUN",
+  "reminders.days.monDate": "12",
+  "reminders.days.tueDate": "13",
+  "reminders.days.wedDate": "14",
+  "reminders.days.thuDate": "15",
+  "reminders.days.friDate": "16",
+  "reminders.days.satDate": "17",
+  "reminders.days.sunDate": "18",
+  "reminders.time.minutesAgo": "{{count}} min ago",
+  "reminders.time.hoursAgo": "{{count}} hour ago",
+  "reminders.time.daysAgo": "{{count}} day ago",
   "settings.title": "Settings",
   "settings.description": "Manage the basic settings of the app here.",
   "settings.global.description": "Manage the basic settings of the app here.",
