Afgerond - FAse 9 Deel 2 en compleet Fase 9 — Reminders & Notificaties

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -35,10 +35,22 @@
   "reminders.sections.days.title": "Tage",
   "reminders.sections.days.subtitle": "Wähle, an welchen Tagen du Erinnerungen erhalten möchtest.",
   "reminders.sections.days.silent": "Benachrichtigungen auch bei Stumm",
+  "reminders.list.title": "Deine Erinnerungen",
+  "reminders.list.empty": "Noch keine Erinnerungen eingestellt.",
+  "reminders.repeat.label": "Wöchentlich wiederholen",
+  "reminders.repeat.yes": "Ja",
+  "reminders.repeat.no": "Nein",
+  "reminders.endDate.enable": "Enddatum setzen",
+  "reminders.endDate.label": "Enddatum",
+  "reminders.endDate.none": "Ohne Enddatum",
   "reminders.actions.addTime": "Zeit hinzufügen",
   "reminders.actions.save": "Einstellungen speichern",
+  "reminders.actions.removeRule": "Entfernen",
+  "reminders.toast.saved": "Erinnerung gespeichert",
+  "reminders.toast.removed": "Erinnerung entfernt",
   "reminders.toast.settingsSaved": "Einstellungen gespeichert",
   "reminders.toast.reminderDue": "Erinnerung für {{time}}",
+  "reminders.toast.reminderFired": "Erinnerung für {{time}}",
   "reminders.toast.permissionNeeded": "Aktiviere Benachrichtigungen, um auch System-Hinweise zu erhalten.",
   "reminders.inbox.title": "Benachrichtigungen",
   "reminders.inbox.clearAll": "Alles löschen",
