--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -35,10 +35,22 @@
   "reminders.sections.days.title": "Days",
   "reminders.sections.days.subtitle": "Select on which days you want to receive reminders.",
   "reminders.sections.days.silent": "Notifications even when silent",
+  "reminders.list.title": "Your reminders",
+  "reminders.list.empty": "No reminders set yet.",
+  "reminders.repeat.label": "Repeat weekly",
+  "reminders.repeat.yes": "Yes",
+  "reminders.repeat.no": "No",
+  "reminders.endDate.enable": "Set end date",
+  "reminders.endDate.label": "End date",
+  "reminders.endDate.none": "No end date",
   "reminders.actions.addTime": "Add time",
   "reminders.actions.save": "Save settings",
+  "reminders.actions.removeRule": "Remove",
+  "reminders.toast.saved": "Reminder saved",
+  "reminders.toast.removed": "Reminder removed",
   "reminders.toast.settingsSaved": "Settings saved",
   "reminders.toast.reminderDue": "Reminder for {{time}}",
+  "reminders.toast.reminderFired": "Reminder for {{time}}",
   "reminders.toast.permissionNeeded": "Enable notifications to also receive system alerts.",
   "reminders.inbox.title": "Notifications",
   "reminders.inbox.clearAll": "Clear all",
