Afgerond - Fase 10  Deel 1 Profiel & Toegankelijkheid

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -6,7 +6,7 @@
   "app.header.closeMenu": "Menü schließen",
   "home.title": "Fit4Seniors",
   "home.description": "Startseite von Fit4Seniors.",
-  "home.greeting": "Guten Morgen, Jan",
+  "home.greeting": "Guten Morgen{{name}}",
   "home.subtext": "Bereit, heute aktiv zu bleiben?",
   "home.hero.title": "Training starten",
   "home.hero.subtitle": "Tägliche Routine • 20 Min",
@@ -326,7 +326,7 @@
   "progress.history.detail.fields.date": "Datum",
   "progress.history.detail.fields.startTime": "Startzeit",
   "progress.history.detail.fields.calories": "Kalorien",
-  "progress.history.detail.heroTitle": "Gut gemacht, Jan!",
+  "progress.history.detail.heroTitle": "Gut gemacht{{name}}!",
   "progress.history.detail.heroSubtitle": "Deine Sitzung ist gespeichert.",
   "progress.history.detail.status": "Abgeschlossen",
   "progress.history.detail.mood.title": "Wie fühlte sich diese Übung an?",
@@ -386,5 +386,67 @@
   "modules.riskRadarDemo.settings.description": "Standard-Schwellenwerte für die Risiko-Demo festlegen.",
   "modules.riskRadarDemo.settings.thresholdLabel": "Standard-Risikoschwelle",
   "modules.riskRadarDemo.settings.showHighRiskOnly": "Nur Assets mit hohem Risiko anzeigen",
-  "modules.riskRadarDemo.settings.saved": "Einstellungen gespeichert."
+  "modules.riskRadarDemo.settings.saved": "Einstellungen gespeichert.",
+  "profile.title": "Profil",
+  "profile.subtitle": "Überblick und Verwaltung Ihrer Ziele. Alles Wichtige auf einen Blick.",
+  "profile.member.meta": "Mitglied seit {year} • Niveau: {level}",
+  "profile.stats.trainings": "Trainings",
+  "profile.stats.minutes": "Minuten",
+  "profile.stats.weeks": "Wochen",
+  "profile.goal.title": "Bewegungsziele",
+  "profile.goal.summary": "{{count}}x pro Woche • {{minutes}} Min",
+  "profile.goal.condition": "Ausdauer verbessern",
+  "profile.goal.strength": "Kraft aufbauen",
+  "profile.goal.balance": "Balance & Stabilität",
+  "profile.goal.social": "Soziale Kontakte",
+  "profile.focus.title": "Bevorzugter Fokus",
+  "profile.focus.balanceStrength": "Fokus auf Balance & Kraft",
+  "profile.focus.endurance": "Ausdauer & Cardio",
+  "profile.focus.mobility": "Mobilität & Flexibilität",
+  "profile.focus.overall": "Ganzheitliche Fitness",
+  "profile.health.title": "Gesundheit",
+  "profile.health.heartBp": "Herzfrequenz & Blutdruck",
+  "profile.health.mobility": "Mobilität & Gelenke",
+  "profile.health.vitals": "Vitalwerte & Wohlbefinden",
+  "profile.accessibility.title": "Barrierefreiheit",
+  "profile.accessibility.largeText": "Größere Schrift",
+  "profile.accessibility.highContrast": "Hoher Kontrast",
+  "profile.accessibility.reduceMotion": "Bewegungen reduzieren",
+  "profile.accessibility.none": "Standard-Einstellungen",
+  "profile.actions.edit": "Profil bearbeiten",
+  "profile.actions.save": "Speichern",
+  "profile.actions.cancel": "Abbrechen",
+  "profile.version": "Fit4Senioren Version 2.1.0",
+  "profile.displayName.placeholder": "Ihr Name",
+  "profile.edit.title": "Profil bearbeiten",
+  "profile.edit.subtitle": "Passen Sie Ihr Profil für ein persönliches Erlebnis an.",
+  "profile.edit.name.title": "Name",
+  "profile.edit.name.subtitle": "Für persönliche Anrede",
+  "profile.edit.name.label": "Anzeigename",
+  "profile.edit.age.title": "Altersgruppe",
+  "profile.edit.age.subtitle": "Für passende Übungen",
+  "profile.edit.goal.title": "Bewegungsziel",
+  "profile.edit.goal.subtitle": "Was möchten Sie erreichen?",
+  "profile.edit.level.title": "Niveau",
+  "profile.edit.level.subtitle": "Aktuelle Fitness",
+  "profile.edit.gender.title": "Geschlecht",
+  "profile.edit.gender.subtitle": "Für persönliche Anrede",
+  "profile.edit.focus.title": "Präferenz",
+  "profile.edit.focus.subtitle": "Worauf möchten Sie sich fokussieren?",
+  "profile.edit.health.title": "Gesundheit",
+  "profile.edit.health.subtitle": "Was soll im Blick bleiben?",
+  "profile.edit.accessibility.title": "Barrierefreiheit",
+  "profile.edit.accessibility.subtitle": "Nur lokale Präferenzen (keine globalen Themenwechsel)",
+  "profile.edit.accessibility.largeTextHint": "Schrift lokal vergrößern, falls möglich",
+  "profile.edit.accessibility.highContrastHint": "Stärkeren Kontrast nutzen, wenn verfügbar",
+  "profile.edit.accessibility.reduceMotionHint": "Animationen möglichst reduzieren",
+  "profile.age.60_65": "60 - 65 Jahre",
+  "profile.age.66_70": "66 - 70 Jahre",
+  "profile.age.71_75": "71 - 75 Jahre",
+  "profile.age.75_plus": "75+ Jahre",
+  "profile.level.starter": "Einsteiger (ruhig)",
+  "profile.level.intermediate": "Mittel (aktiv)",
+  "profile.level.advanced": "Fortgeschritten (sportlich)",
+  "profile.gender.male": "Männlich",
+  "profile.gender.female": "Weiblich"
 }
