--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,7 @@
   "app.header.closeMenu": "Close menu",
   "home.title": "Fit4Seniors",
   "home.description": "Fit4Seniors start screen.",
-  "home.greeting": "Good morning, Jan",
+  "home.greeting": "Good morning{{name}}",
   "home.subtext": "Ready to stay active today?",
   "home.hero.title": "Start exercise",
   "home.hero.subtitle": "Daily routine • 20 min",
@@ -327,7 +327,7 @@
   "progress.history.detail.fields.date": "Date",
   "progress.history.detail.fields.startTime": "Start time",
   "progress.history.detail.fields.calories": "Calories",
-  "progress.history.detail.heroTitle": "Great job, Jan!",
+  "progress.history.detail.heroTitle": "Great job{{name}}!",
   "progress.history.detail.heroSubtitle": "Your session has been saved.",
   "progress.history.detail.status": "Completed",
   "progress.history.detail.mood.title": "How did this exercise feel?",
@@ -388,5 +388,67 @@
   "modules.riskRadarDemo.settings.thresholdLabel": "Default risk threshold",
   "modules.riskRadarDemo.settings.showHighRiskOnly": "Show only high-risk assets",
   "modules.riskRadarDemo.settings.saved": "Settings saved."
+  ,"profile.title": "Profile",
+  "profile.subtitle": "View and manage your personal progress. See goals and level at a glance.",
+  "profile.member.meta": "Member since {year} • Level: {level}",
+  "profile.stats.trainings": "Sessions",
+  "profile.stats.minutes": "Minutes",
+  "profile.stats.weeks": "Weeks",
+  "profile.goal.title": "Movement goals",
+  "profile.goal.summary": "{{count}}x per week • {{minutes}} min",
+  "profile.goal.condition": "Improve endurance",
+  "profile.goal.strength": "Build strength",
+  "profile.goal.balance": "Balance & stability",
+  "profile.goal.social": "Social contact",
+  "profile.focus.title": "Preferred focus",
+  "profile.focus.balanceStrength": "Focus on balance & strength",
+  "profile.focus.endurance": "Endurance & cardio",
+  "profile.focus.mobility": "Mobility & flexibility",
+  "profile.focus.overall": "Overall fitness",
+  "profile.health.title": "Health",
+  "profile.health.heartBp": "Heart rate & blood pressure",
+  "profile.health.mobility": "Mobility & joints",
+  "profile.health.vitals": "Vitals & wellbeing",
+  "profile.accessibility.title": "Accessibility",
+  "profile.accessibility.largeText": "Larger text",
+  "profile.accessibility.highContrast": "High contrast",
+  "profile.accessibility.reduceMotion": "Reduce motion",
+  "profile.accessibility.none": "Standard settings",
+  "profile.actions.edit": "Edit profile",
+  "profile.actions.save": "Save",
+  "profile.actions.cancel": "Cancel",
+  "profile.version": "Fit4Seniors Version 2.1.0",
+  "profile.displayName.placeholder": "Your name",
+  "profile.edit.title": "Edit profile",
+  "profile.edit.subtitle": "Adjust your profile for a personal experience that fits your goals.",
+  "profile.edit.name.title": "Name",
+  "profile.edit.name.subtitle": "For personal greeting",
+  "profile.edit.name.label": "Display name",
+  "profile.edit.age.title": "Age group",
+  "profile.edit.age.subtitle": "To tailor exercises",
+  "profile.edit.goal.title": "Movement goal",
+  "profile.edit.goal.subtitle": "What do you want to achieve?",
+  "profile.edit.level.title": "Level",
+  "profile.edit.level.subtitle": "Current fitness",
+  "profile.edit.gender.title": "Gender",
+  "profile.edit.gender.subtitle": "For personal salutation",
+  "profile.edit.focus.title": "Preference",
+  "profile.edit.focus.subtitle": "Choose your focus",
+  "profile.edit.health.title": "Health",
+  "profile.edit.health.subtitle": "What to keep an eye on",
+  "profile.edit.accessibility.title": "Accessibility",
+  "profile.edit.accessibility.subtitle": "Local preferences only (no global theme changes)",
+  "profile.edit.accessibility.largeTextHint": "Increase text size where supported",
+  "profile.edit.accessibility.highContrastHint": "Use stronger contrast where available",
+  "profile.edit.accessibility.reduceMotionHint": "Reduce animations when possible",
+  "profile.age.60_65": "60 - 65 years",
+  "profile.age.66_70": "66 - 70 years",
+  "profile.age.71_75": "71 - 75 years",
+  "profile.age.75_plus": "75+ years",
+  "profile.level.starter": "Starter (Easy)",
+  "profile.level.intermediate": "Intermediate (Active)",
+  "profile.level.advanced": "Advanced (Sporty)",
+  "profile.gender.male": "Male",
+  "profile.gender.female": "Female"
 }
 
