Afgerond - Fase 11 — Settings (Overview + Detail) + Info & Help

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -126,6 +126,59 @@
   "settings.aiDemo.buttonRunning": "AI läuft...",
   "settings.aiDemo.errorPrefix": "Fehler:",
   "settings.aiDemo.resultLabel": "Ergebnis:",
+  "settings.overview.subtitle": "Passen Sie die App an Ihre Vorlieben für ein optimales Erlebnis an.",
+  "settings.overview.items.accessibility.title": "Textgröße & Kontrast",
+  "settings.overview.items.accessibility.subtitle": "Lesbarkeit anpassen",
+  "settings.overview.items.sound.title": "Ton & Feedback",
+  "settings.overview.items.sound.subtitle": "Sprachführung und Signaltöne",
+  "settings.overview.items.notifications.title": "Benachrichtigungen",
+  "settings.overview.items.notifications.subtitle": "Erinnerungen verwalten",
+  "settings.overview.items.profile.title": "Profil",
+  "settings.overview.items.profile.subtitle": "Ihre Daten und Privatsphäre",
+  "settings.overview.items.help.title": "Information & Hilfe",
+  "settings.overview.items.help.subtitle": "FAQ und Sicherheitshinweise",
+  "settings.overview.support.title": "Haben Sie Fragen?",
+  "settings.overview.support.subtitle": "Unser Support-Team hilft gern bei den Einstellungen.",
+  "settings.overview.support.cta": "Hilfe anfragen",
+  "settings.overview.version": "Fit4Seniors Version 2.1.0",
+  "settings.detail.header": "Einstellungen",
+  "settings.detail.accessibility.title": "Textgröße anpassen",
+  "settings.detail.accessibility.subtitle": "Machen Sie die App sofort leichter lesbar.",
+  "settings.detail.accessibility.body": "Wählen Sie eine angenehme Größe. Änderungen gelten sofort.",
+  "settings.detail.accessibility.sliderLabel": "Schieberegler für Textgröße",
+  "settings.detail.accessibility.scale.small": "Klein",
+  "settings.detail.accessibility.scale.default": "Standard",
+  "settings.detail.accessibility.scale.large": "Groß",
+  "settings.detail.accessibility.preview.title": "Guten Morgen, Anna",
+  "settings.detail.accessibility.preview.body": "So sieht der Text in der App aus.",
+  "settings.detail.accessibility.preview.cta": "Übung starten",
+  "settings.detail.accessibility.highContrast": "Hohen Kontrast aktivieren",
+  "settings.detail.accessibility.callout.title": "Schwer zu lesen?",
+  "settings.detail.accessibility.callout.body": "Sie können auch Kontrast oder Screenreader in den Geräteeinstellungen aktivieren.",
+  "settings.detail.accessibility.callout.cta": "Mehr Tipps",
+  "settings.detail.sound.title": "Ton & Feedback",
+  "settings.detail.sound.body": "Audiohinweise werden in den Trainings gesteuert. Öffnen Sie die Trainingsübersicht, um Signale anzupassen.",
+  "settings.detail.sound.cta": "Trainingsübersicht öffnen",
+  "settings.detail.profile.title": "Profil",
+  "settings.detail.profile.body": "Verwalten Sie Ihre persönlichen Daten und Privatsphäre im Profilbereich.",
+  "settings.detail.profile.cta": "Profil öffnen",
+  "settings.detail.generic.title": "Weitere Einstellungen folgen bald",
+  "settings.detail.generic.subtitle": "Platzhalter",
+  "settings.detail.generic.body": "Dieser Bereich wird bald verfügbar. Nutzen Sie bis dahin Info & Hilfe.",
+  "settings.detail.generic.cta": "Zu Info & Hilfe",
+  "settings.help.title": "Info & Hilfe",
+  "settings.help.subtitle": "Hier finden Sie Antworten und wichtige Sicherheitshinweise.",
+  "settings.help.faq.title": "Häufig gestellte Fragen",
+  "settings.help.faq.subtitle": "Antworten auf häufige Fragen",
+  "settings.help.safety.title": "Sicherheit & Hinweise",
+  "settings.help.safety.subtitle": "Gesundheitsempfehlungen und Richtlinien",
+  "settings.help.privacy.title": "Datenschutz & Daten",
+  "settings.help.privacy.subtitle": "So schützen wir Ihre Daten",
+  "settings.help.updates.title": "Updates / Was ist neu",
+  "settings.help.updates.subtitle": "Die neuesten Verbesserungen",
+  "settings.help.contact.title": "Kommen Sie nicht weiter?",
+  "settings.help.contact.subtitle": "Unser Support-Team hilft gerne.",
+  "settings.help.contact.cta": "Support kontaktieren",
   "common.back": "Zurück",
   "validation.required": "Dieses Feld ist erforderlich.",
   "validation.maxLength": "Der Text ist zu lang. Bitte kürzen.",
