--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -126,6 +126,59 @@
   "settings.aiDemo.buttonRunning": "AI running...",
   "settings.aiDemo.errorPrefix": "Error:",
   "settings.aiDemo.resultLabel": "Result:",
+  "settings.overview.subtitle": "Adjust the app to your preferences for the best experience.",
+  "settings.overview.items.accessibility.title": "Text size & contrast",
+  "settings.overview.items.accessibility.subtitle": "Adjust readability",
+  "settings.overview.items.sound.title": "Sound & feedback",
+  "settings.overview.items.sound.subtitle": "Voice guidance and cues",
+  "settings.overview.items.notifications.title": "Notifications",
+  "settings.overview.items.notifications.subtitle": "Manage reminders",
+  "settings.overview.items.profile.title": "Profile",
+  "settings.overview.items.profile.subtitle": "Your data and privacy",
+  "settings.overview.items.help.title": "Information & help",
+  "settings.overview.items.help.subtitle": "FAQ and safety notes",
+  "settings.overview.support.title": "Need help?",
+  "settings.overview.support.subtitle": "Our support team is ready to assist with settings.",
+  "settings.overview.support.cta": "Ask for help",
+  "settings.overview.version": "Fit4Seniors Version 2.1.0",
+  "settings.detail.header": "Settings",
+  "settings.detail.accessibility.title": "Adjust text size",
+  "settings.detail.accessibility.subtitle": "Make the app easier to read right away.",
+  "settings.detail.accessibility.body": "Choose a size that feels comfortable. Changes apply instantly.",
+  "settings.detail.accessibility.sliderLabel": "Text size slider",
+  "settings.detail.accessibility.scale.small": "Small",
+  "settings.detail.accessibility.scale.default": "Default",
+  "settings.detail.accessibility.scale.large": "Large",
+  "settings.detail.accessibility.preview.title": "Good morning, Anna",
+  "settings.detail.accessibility.preview.body": "This is how text will look throughout the app.",
+  "settings.detail.accessibility.preview.cta": "Start exercise",
+  "settings.detail.accessibility.highContrast": "Enable high contrast",
+  "settings.detail.accessibility.callout.title": "Hard to read?",
+  "settings.detail.accessibility.callout.body": "You can also enable high contrast or screen reader options on your device.",
+  "settings.detail.accessibility.callout.cta": "More tips",
+  "settings.detail.sound.title": "Sound & feedback",
+  "settings.detail.sound.body": "Audio guidance is managed inside training sessions. Open the training overview to adjust cues.",
+  "settings.detail.sound.cta": "Open training overview",
+  "settings.detail.profile.title": "Profile",
+  "settings.detail.profile.body": "Update your personal data and privacy preferences from the profile section.",
+  "settings.detail.profile.cta": "Open profile",
+  "settings.detail.generic.title": "More settings coming soon",
+  "settings.detail.generic.subtitle": "Placeholder",
+  "settings.detail.generic.body": "This section will be available soon. Until then, you can manage this via help & info.",
+  "settings.detail.generic.cta": "Go to help",
+  "settings.help.title": "Info & help",
+  "settings.help.subtitle": "Find answers and important safety information here.",
+  "settings.help.faq.title": "Frequently asked questions",
+  "settings.help.faq.subtitle": "Answers to common questions",
+  "settings.help.safety.title": "Safety & disclaimers",
+  "settings.help.safety.subtitle": "Health guidance and recommendations",
+  "settings.help.privacy.title": "Privacy & data",
+  "settings.help.privacy.subtitle": "How we protect your data",
+  "settings.help.updates.title": "Updates / What’s new",
+  "settings.help.updates.subtitle": "Latest improvements to the app",
+  "settings.help.contact.title": "Need assistance?",
+  "settings.help.contact.subtitle": "Our support team is ready to help.",
+  "settings.help.contact.cta": "Contact support",
   "common.back": "Back",
   "validation.required": "This field is required.",
   "validation.maxLength": "The text is too long. Please shorten it.",
