Afgerond - Fase 11 Settings last changes

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -131,16 +131,53 @@
   "settings.overview.items.accessibility.subtitle": "Lesbarkeit anpassen",
   "settings.overview.items.sound.title": "Ton & Feedback",
   "settings.overview.items.sound.subtitle": "Sprachführung und Signaltöne",
+  "settings.overview.items.sound.value": "Ton: {{sound}} · Feedback: {{haptics}}",
   "settings.overview.items.notifications.title": "Benachrichtigungen",
   "settings.overview.items.notifications.subtitle": "Erinnerungen verwalten",
-  "settings.overview.items.profile.title": "Profil",
-  "settings.overview.items.profile.subtitle": "Ihre Daten und Privatsphäre",
-  "settings.overview.items.help.title": "Information & Hilfe",
-  "settings.overview.items.help.subtitle": "FAQ und Sicherheitshinweise",
-  "settings.overview.support.title": "Haben Sie Fragen?",
-  "settings.overview.support.subtitle": "Unser Support-Team hilft gern bei den Einstellungen.",
-  "settings.overview.support.cta": "Hilfe anfragen",
+  "settings.overview.items.language.title": "Sprache",
+  "settings.overview.items.language.subtitle": "App-Sprache wählen",
+  "settings.overview.items.accessibility.value": "{{textSize}} · Kontrast: {{contrast}}",
   "settings.overview.version": "Fit4Seniors Version 2.1.0",
+  "settings.values.textScale.small": "Klein",
+  "settings.values.textScale.default": "Standard",
+  "settings.values.textScale.large": "Groß",
+  "settings.values.contrast.on": "Ein",
+  "settings.values.contrast.off": "Aus",
+  "settings.values.sound.on": "Ein",
+  "settings.values.sound.off": "Aus",
+  "settings.values.haptics.on": "Ein",
+  "settings.values.haptics.off": "Aus",
+  "settings.values.language.de": "Deutsch",
+  "settings.values.language.en": "English",
+  "settings.bottomToast.actions.apply": "Anwenden",
+  "settings.bottomToast.actions.cancel": "Abbrechen",
+  "settings.bottomToast.actions.reset": "Zurücksetzen",
+  "settings.bottomToast.text.eyebrow": "Text & Kontrast",
+  "settings.bottomToast.text.title": "Textgröße & Kontrast",
+  "settings.bottomToast.text.section.textSize": "Textgröße",
+  "settings.bottomToast.text.section.contrast": "Kontrast",
+  "settings.bottomToast.text.preview": "Der schnelle braune Fuchs springt über den faulen Hund.",
+  "settings.bottomToast.text.contrast.standard.title": "Standard",
+  "settings.bottomToast.text.contrast.standard.body": "Ausgewogene Farben",
+  "settings.bottomToast.text.contrast.high.title": "Hoher Kontrast",
+  "settings.bottomToast.text.contrast.high.body": "Mehr Lesbarkeit",
+  "settings.bottomToast.sound.eyebrow": "Ton",
+  "settings.bottomToast.sound.title": "Ton & Feedback",
+  "settings.bottomToast.sound.section.volume": "Lautstärke",
+  "settings.bottomToast.sound.volumeHint": "Gilt für Sprachhinweise und Signale.",
+  "settings.bottomToast.sound.section.toggles": "Optionen",
+  "settings.bottomToast.sound.sound.title": "Ton",
+  "settings.bottomToast.sound.sound.body": "Sprachhinweise und Signale",
+  "settings.bottomToast.sound.haptics.title": "Haptik",
+  "settings.bottomToast.sound.haptics.body": "Vibration als Feedback",
+  "settings.bottomToast.language.eyebrow": "Sprache",
+  "settings.bottomToast.language.title": "Sprache",
+  "settings.bottomToast.language.section.title": "Sprache wählen",
+  "settings.bottomToast.language.de.title": "Deutsch",
+  "settings.bottomToast.language.de.subtitle": "Deutsch (DE)",
+  "settings.bottomToast.language.en.title": "Englisch",
+  "settings.bottomToast.language.en.subtitle": "English (EN)",
+  "settings.bottomToast.language.hint": "Die Sprache wird sofort in der App aktualisiert.",
   "settings.detail.header": "Einstellungen",
   "settings.detail.accessibility.title": "Textgröße anpassen",
   "settings.detail.accessibility.subtitle": "Machen Sie die App sofort leichter lesbar.",
