--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -131,16 +131,53 @@
   "settings.overview.items.accessibility.subtitle": "Adjust readability",
   "settings.overview.items.sound.title": "Sound & feedback",
   "settings.overview.items.sound.subtitle": "Voice guidance and cues",
+  "settings.overview.items.sound.value": "Sound: {{sound}} · Feedback: {{haptics}}",
   "settings.overview.items.notifications.title": "Notifications",
   "settings.overview.items.notifications.subtitle": "Manage reminders",
-  "settings.overview.items.profile.title": "Profile",
-  "settings.overview.items.profile.subtitle": "Your data and privacy",
-  "settings.overview.items.help.title": "Information & help",
-  "settings.overview.items.help.subtitle": "FAQ and safety notes",
-  "settings.overview.support.title": "Need help?",
-  "settings.overview.support.subtitle": "Our support team is ready to assist with settings.",
-  "settings.overview.support.cta": "Ask for help",
+  "settings.overview.items.language.title": "Language",
+  "settings.overview.items.language.subtitle": "Choose app language",
+  "settings.overview.items.accessibility.value": "{{textSize}} · Contrast: {{contrast}}",
   "settings.overview.version": "Fit4Seniors Version 2.1.0",
+  "settings.values.textScale.small": "Small",
+  "settings.values.textScale.default": "Standard",
+  "settings.values.textScale.large": "Large",
+  "settings.values.contrast.on": "On",
+  "settings.values.contrast.off": "Off",
+  "settings.values.sound.on": "On",
+  "settings.values.sound.off": "Off",
+  "settings.values.haptics.on": "On",
+  "settings.values.haptics.off": "Off",
+  "settings.values.language.de": "Deutsch",
+  "settings.values.language.en": "English",
+  "settings.bottomToast.actions.apply": "Apply",
+  "settings.bottomToast.actions.cancel": "Cancel",
+  "settings.bottomToast.actions.reset": "Reset",
+  "settings.bottomToast.text.eyebrow": "Accessibility",
+  "settings.bottomToast.text.title": "Text size & contrast",
+  "settings.bottomToast.text.section.textSize": "Text size",
+  "settings.bottomToast.text.section.contrast": "Contrast",
+  "settings.bottomToast.text.preview": "The quick brown fox jumps over the lazy dog.",
+  "settings.bottomToast.text.contrast.standard.title": "Standard",
+  "settings.bottomToast.text.contrast.standard.body": "Balanced colors",
+  "settings.bottomToast.text.contrast.high.title": "High contrast",
+  "settings.bottomToast.text.contrast.high.body": "Extra legibility",
+  "settings.bottomToast.sound.eyebrow": "Audio",
+  "settings.bottomToast.sound.title": "Sound & feedback",
+  "settings.bottomToast.sound.section.volume": "Volume",
+  "settings.bottomToast.sound.volumeHint": "Applies to guidance and cues.",
+  "settings.bottomToast.sound.section.toggles": "Options",
+  "settings.bottomToast.sound.sound.title": "Sound",
+  "settings.bottomToast.sound.sound.body": "Enable voice & cues",
+  "settings.bottomToast.sound.haptics.title": "Haptics",
+  "settings.bottomToast.sound.haptics.body": "Vibration feedback",
+  "settings.bottomToast.language.eyebrow": "Language",
+  "settings.bottomToast.language.title": "Language",
+  "settings.bottomToast.language.section.title": "Choose language",
+  "settings.bottomToast.language.de.title": "German",
+  "settings.bottomToast.language.de.subtitle": "Deutsch (DE)",
+  "settings.bottomToast.language.en.title": "English",
+  "settings.bottomToast.language.en.subtitle": "English (EN)",
+  "settings.bottomToast.language.hint": "Changing the language updates labels immediately.",
   "settings.detail.header": "Settings",
   "settings.detail.accessibility.title": "Adjust text size",
   "settings.detail.accessibility.subtitle": "Make the app easier to read right away.",
